--- a/.env
+++ b/.env
@@ -1,10 +1,15 @@
-TYPEORM_CONNECTION = postgres
-TYPEORM_HOST = localhost
-TYPEORM_USERNAME = postgres
-TYPEORM_PASSWORD = 1234
-TYPEORM_DATABASE = tg-studium
-TYPEORM_PORT = 5432
-TYPEORM_SYNCHRONIZE = true
-TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = **/modules/**/entities/*.js
-#TYPEORM_ENTITIES = dist/**/*.entity{.ts,.js}
+HOST=http://localhost:3000
+APP_NAME=TG Studium
+
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=localhost
+TYPEORM_USERNAME=postgres
+TYPEORM_PASSWORD=1234
+TYPEORM_DATABASE=tg-studium
+TYPEORM_PORT=5432
+TYPEORM_SYNCHRONIZE=true
+TYPEORM_LOGGING=true
+TYPEORM_ENTITIES=**/modules/**/entities/*.js
+#TYPEORM_ENTITIES=dist/**/*.entity{.ts,.js}
+TYPEORM_DRIVER_EXTRA={"ssl":false}
+
